--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-	"homepage": "https://ustkost.github.io/conturhack",
+  "homepage": "https://ustkost.github.io/conturhack",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
@@ -27,6 +27,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
